--- a/source/less/blocks/deep-advantages.less
+++ b/source/less/blocks/deep-advantages.less
@@ -53,8 +53,8 @@
       }
 
       .deep-advantages__description {
-        padding-right: 0;
-        padding-left: 43px;
+        padding-right: 2px;
+        padding-left: 10px;
       }
     }
   }
@@ -78,8 +78,12 @@
       }
 
       .deep-advantages__description {
-        padding-right: 0;
-        padding-left: 93px;
+        padding-right: 34px;
+        padding-left: 113px;
+
+        br {
+          display: none;
+        }
       }
     }
   }
