--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -12,6 +12,7 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 21px;
+    margin-top: 34px;
   }
 
   &::after {
@@ -61,7 +62,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 60px;
+    margin-bottom: 63px;
 
     &::before,
     &::after {
