--- a/source/less/blocks/form-presenting.less
+++ b/source/less/blocks/form-presenting.less
@@ -32,6 +32,10 @@
   color: @brown;
   margin-right: 13px;
   margin-top: 18px;
+
+  @media (min-width: @desktop-width) {
+    margin-top: 16px;
+  }
 }
 
 .presenting-list {
