--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -13,11 +13,16 @@
   position: relative;
 }
 
+.logo__wrapper {
+  background-color: @base-white;
+  position: relative;
+  min-height: 56px;
+}
+
 .page-header__logo {
   height: 84px;
   position: absolute;
   left: 109px;
-  z-index: 0;
 
   @media (min-width: @tablet-width) {
     left: 333px;
