--- a/source/less/blocks/form-impression.less
+++ b/source/less/blocks/form-impression.less
@@ -76,6 +76,10 @@
     display: flex;
     padding-left: 75px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 80px;
+  }
 }
 
 .impression-input--radio + .imprassion__label::before {
@@ -91,6 +95,11 @@
   @media (min-width: @tablet-width) {
     left: -2px;
     top: -17px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 5px;
+    top: -15px;
   }
 }
 
@@ -117,6 +126,11 @@
 
   @media (min-width: @tablet-width) {
     left: 17px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 22px;
+    top: 3px;
   }
 }
 
