--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -48,8 +48,7 @@
   @media (min-width: @tablet-width) {
     margin: auto;
     margin-bottom: 39px;
-    padding: 0 10px;
-    width: 435px;
+    padding: 0 100px;
     box-sizing: border-box;
 
     br {
@@ -59,5 +58,7 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 43px;
+    padding: 0 310px;
+    display: flex;
   }
 }
