--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -1,16 +1,41 @@
 .page-intro {
-  background: url("../../img/bg-back-mobile@1x.jpg") center no-repeat;
+  background: url("../../img/bg-back-mobile@1x.jpg");
   height: 158px;
+  background-repeat: no-repeat;
   margin: 0;
   padding: 0;
+  background-position-y: -230px;
+  background-position-x: -225px;
 
-  @media (min-width: @tablet-width) {
-    background-size: cover;
-    height: 290px;
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-size: 1536px auto;
+    background-position-y: -505px;
+    background-position-x: -470px;
   }
 
   @media (min-width: @tablet-width) {
-    height: 301px;
+    height: 290px;
+    background-image: url("../../img/bg-back-tablet@1x.jpg");
+    background-position-y: -230px;
+    background-position-x: 0;
+    padding-bottom: 10px;
+
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-size: cover;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-position-y: -215px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/bg-back-desktop@2x.jpg");
+    }
   }
 }
 
@@ -41,7 +66,15 @@
     box-sizing: border-box;
 
     @media (min-width: @tablet-width) {
-      display: none;
+      background-image: url("../../img/bg-intro-triangle-tablet.svg");
+      height: 57px;
+      bottom: -110px;
+    }
+
+    @media (min-width: @desktop-width) {
+      background-image: url("../../img/bg-intro-triangle-desktop.svg");
+      bottom: -116px;
+      left: -2px;
     }
   }
 }
