--- a/source/less/blocks/welcome-block.less
+++ b/source/less/blocks/welcome-block.less
@@ -1,14 +1,36 @@
 .welcome {
-  background: url("../img/bg-back-mobile@1x.jpg") center no-repeat;
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-position: center;
   height: 389px;
+  width: 100%;
   margin: 0;
   padding: 0;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-size: 1536px auto;
+  }
+
   @media (min-width: @tablet-width) {
+    background-image: url("../../img/bg-back-tablet@1x.jpg");
     background-size: cover;
     height: 518px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-size: cover;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/bg-back-desktop@2x.jpg");
+    }
   }
 }
+
 
 .welcome__wrapper {
   padding: 90px 0;
@@ -21,7 +43,7 @@
     bottom: 11px;
     left: 0;
     width: 100%;
-    background: url("../../img/bg-intro-triangle-mobile.svg");
+    background-image: url("../../img/bg-intro-triangle-mobile.svg");
     background-repeat: no-repeat;
     height: 30px;
     background-size: cover;
@@ -29,7 +51,13 @@
     box-sizing: border-box;
 
     @media (min-width: @tablet-width) {
-      display: none;
+      background-image: url("../../img/bg-intro-triangle-tablet.svg");
+      height: 57px;
+      bottom: 5px;
+    }
+
+    @media (min-width: @desktop-width) {
+      background-image: url("../../img/bg-intro-triangle-desktop.svg");
     }
   }
 
