сборка проекта в gulp

--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -9,7 +9,7 @@
 
   @media (min-resolution: 2dppx) {
     background-image: url("../../img/bg-back-mobile@2x.jpg");
-    background-size: 1536px auto;
+    background-size: auto 800px;
     background-position-y: -505px;
     background-position-x: -470px;
   }
