--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,7 +9,11 @@
 @import "blocks/welcome-block.less";
 @import "blocks/page-intro.less";
 @import "blocks/advantages.less";
+@import "blocks/first-advantage.less";
+@import "blocks/second-advantage.less";
 @import "blocks/deep-advantages.less";
+@import "blocks/advantages-others.less";
+@import "blocks/advantages-number.less";
 @import "blocks/blue-theme.less";
 @import "blocks/standart-theme.less";
 @import "blocks/search.less";
@@ -20,6 +24,8 @@
 @import "blocks/photo-video.less";
 @import "blocks/photo.less";
 @import "blocks/video.less";
+@import "blocks/video-tools.less";
+@import "blocks/video-controls.less";
 @import "blocks/feedback.less";
 @import "blocks/form-presenting.less";
 @import "blocks/form-contacts.less";
@@ -31,3 +37,4 @@
 @import "blocks/page-footer.less";
 @import "visually-hidden.less";
 @import "display-none.less";
+@import "blocks/modal.less";
