--- a/source/less/blocks/welcome-block.less
+++ b/source/less/blocks/welcome-block.less
@@ -8,7 +8,7 @@
 
   @media (min-resolution: 2dppx) {
     background-image: url("../../img/bg-back-mobile@2x.jpg");
-    background-size: 1536px auto;
+    background-size: cover;
   }
 
   @media (min-width: @tablet-width) {
