--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -17,6 +17,11 @@
   background-color: @base-white;
   position: relative;
   min-height: 56px;
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    background-color: transporent;
+  }
 }
 
 .page-header__logo-link {
