--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -74,7 +74,7 @@
     @media (min-width: @desktop-width) {
       background-image: url("../../img/bg-intro-triangle-desktop.svg");
       bottom: -116px;
-      left: -2px;
+      left: 0;
     }
   }
 }
