--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,6 +23,8 @@
 @import "blocks/button.less";
 @import "blocks/photo-video.less";
 @import "blocks/photo.less";
+@import "blocks/photo-first.less";
+@import "blocks/photo-like.less";
 @import "blocks/video.less";
 @import "blocks/video-tools.less";
 @import "blocks/video-controls.less";
@@ -38,3 +40,6 @@
 @import "visually-hidden.less";
 @import "display-none.less";
 @import "blocks/modal.less";
+@import "blocks/modal-mistake.less";
+@import "blocks/modal-success.less";
+@import "blocks/modal-button.less";
