--- a/source/less/vars.less
+++ b/source/less/vars.less
@@ -17,12 +17,16 @@
 @middle-blue:#5496BD;
 @dark-grey:#5C6870;
 
+
 /*--Цвета для замены картинок--*/
 
 /*------Тени----*/
 @mobile-menu-dark-shadow: 1px solid fade(@base-black, 20%);
 @mobile-menu-white-shadow: 1px solid fade(@base-white, 20%);
 @dark-gradient: linear-gradient(180deg, fade(@base-black, 0%) 0%, fade(@base-black, 20%) 100%);
+@red-shadow: 1px 2px 6px rgba(180, 17, 17, 0.493);
+@modal-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
+@page-desktop-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
 
 /*-----Состояния------------*/
 @main-menu-active:@chocolate;
