--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,8 +1,25 @@
-.map__picture {
+.map__wrapper {
+  position: relative;
+  width: 100%;
+  height: 350px;
+  margin: 0;
+  padding: 0;
+}
+
+.map-picture__wrapper {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: 0;
+  padding: 0;
+  width: 320px;
+  height: 350px;
+  overflow: hidden;
+
   @media (min-width: @tablet-width) {
-    margin: auto;
-    width: 768px;
-    height: 350px;
+
+    width: 760px;
   }
 
   @media (min-width: @desktop-width) {
@@ -10,54 +27,15 @@
   }
 }
 
-.map__wrapper {
-  position: relative;
+.map-picture {
+  display: flex;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
 
-  &::before {
-    content: "";
-    position: absolute;
-    background-color: @base-white;
-    width: 27px;
-    height: 27px;
-    top: 161px;
-    left: 146px;
-    border-radius: 50%;
-    z-index: 5;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    background-color: @base-blue;
-    width: 17px;
-    height: 17px;
-    border-radius: 50%;
-    top: 166px;
-    left: 151px;
-    z-index: 6;
-  }
-
-  @media (min-width: @tablet-width) {
-    &::before {
-      top: 164px;
-      left: 370px;
-    }
-
-    &::after {
-      top: 169px;
-      left: 375px;
-    }
-  }
-
-  @media (min-width: @desktop-width) {
-    &::before {
-      top: 162px;
-      left: 586px;
-    }
-
-    &::after {
-      top: 167px;
-      left: 591px;
-    }
-  }
+.map-iframe {
+  z-index: 2;
+  border: none;
+  width: 100%;
 }
