--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -22,7 +22,7 @@
 
 .page-container {
   @media (min-width: @desktop-width) {
-    box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+    box-shadow: @page-desktop-shadow;
     margin: auto;
     width: 1200px;
   }
