правки по модалкам и firefox

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -34,7 +34,7 @@
   @media (min-width: @tablet-width) {
     padding-bottom: 34px;
     padding-top: 44px;
-    max-width: 520px;
+    width: 520px;
     margin: auto;
 
     &::after {
