--- a/source/less/blocks/form-visited.less
+++ b/source/less/blocks/form-visited.less
@@ -24,6 +24,7 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 40px;
+    margin-top: 8px;
 
     &::after {
       width: 280px;
@@ -57,7 +58,12 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 59px;
+    margin-top: 0;
     font-size: 21px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 22px;
   }
 }
 
