--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -2,6 +2,7 @@
   background: url("../../img/bg-back-mobile@1x.jpg");
   height: 158px;
   background-repeat: no-repeat;
+  background-color: @brown;
   margin: 0;
   padding: 0;
   background-position-y: -230px;
@@ -19,8 +20,6 @@
     background-image: url("../../img/bg-back-tablet@1x.jpg");
     background-position-y: -230px;
     background-position-x: 0;
-    padding-bottom: 10px;
-
 
     @media (min-resolution: 2dppx) {
       background-image: url("../../img/bg-back-tablet@2x.jpg");
@@ -32,6 +31,7 @@
 
     background-image: url("../../img/bg-back-desktop@1x.jpg");
     background-position-y: -215px;
+    padding-bottom: 10px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../../img/bg-back-desktop@2x.jpg");
@@ -68,7 +68,7 @@
     @media (min-width: @tablet-width) {
       background-image: url("../../img/bg-intro-triangle-tablet.svg");
       height: 57px;
-      bottom: -110px;
+      bottom: -111px;
     }
 
     @media (min-width: @desktop-width) {
