--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -8,7 +8,6 @@
   border: none;
   text-decoration: none;
   min-height: 58px;
-
   font-family: @main-font;
 
   @media (min-width: @tablet-width) {
@@ -20,7 +19,7 @@
   width: 100%;
 
   @media (min-width: @tablet-width) {
-    max-width: 324px;
+    width: 324px;
   }
 
   @media (min-width: @desktop-width) {
