--- a/source/less/blocks/form-emotions.less
+++ b/source/less/blocks/form-emotions.less
@@ -26,7 +26,7 @@
     background-color: @middle-grey;
     height: 1px;
     width: 320px;
-    top: -35px;
+    top: -22px;
     left: -20px;
 
     @media (min-width: @tablet-width) {
@@ -38,6 +38,7 @@
 
   @media (min-width: @desktop-width) {
     margin-top: 44px;
+    margin-bottom: 54px;
 
     &::before,
     &::after {
