--- a/source/less/blocks/welcome-block.less
+++ b/source/less/blocks/welcome-block.less
@@ -1,6 +1,7 @@
 .welcome {
   background-image: url("../../img/bg-back-mobile@1x.jpg");
   background-position: center;
+  background-color: @base-blue;
   height: 389px;
   width: 100%;
   margin: 0;
