правки перед защитой

--- a/source/less/blocks/advantages-number.less
+++ b/source/less/blocks/advantages-number.less
@@ -1,5 +1,4 @@
-
-.advatages__number {
+.advantages-number {
   position: relative;
   margin: auto;
   color: @brown;
@@ -25,18 +24,9 @@
   }
 }
 
-.advatages__number--white {
+.advantages-number--white {
   &::before,
   &::after {
     background-color: @base-white;
   }
-}
-
-.first-advantage .advatages__number,
-.second-advantage .advatages__number {
-  &::before,
-  &::after {
-    color: @base-white;
-  }
-  color: @base-white;
 }
