--- a/source/less/blocks/advantages-others.less
+++ b/source/less/blocks/advantages-others.less
@@ -1,5 +1,4 @@
-
-.advantages__others {
+.advantages-others {
   background-color: @base-lightkgrey;
   margin: 0;
   padding: 0;
@@ -55,7 +54,7 @@
         padding-right: 45px;
       }
 
-      .advatages__number {
+      .advantages-number {
         padding-right: 43px;
 
         &::after {
@@ -82,7 +81,7 @@
         padding-top: 25px;
       }
 
-      .advatages__number {
+      .advantages-number {
         padding-left: 45px;
 
         &::before {
@@ -109,7 +108,7 @@
         padding-top: 10px;
       }
 
-      .advatages__number {
+      .advantages-number {
         padding-right: 43px;
 
         &::after {
@@ -138,7 +137,7 @@
         padding-top: 23px;
       }
 
-      .advatages__number {
+      .advantages-number {
         padding-top: 2px;
 
         &::before {
