--- a/source/less/blocks/first-advantage.less
+++ b/source/less/blocks/first-advantage.less
@@ -36,3 +36,11 @@
     }
   }
 }
+
+.first-advantage .advantages-number {
+  &::before,
+  &::after {
+    color: @base-white;
+  }
+  color: @base-white;
+}
