--- a/source/less/blocks/modal-mistake.less
+++ b/source/less/blocks/modal-mistake.less
@@ -1,4 +1,4 @@
-.modal__mistake {
+.modal-mistake {
   height: 280px;
   bottom: 35%;
   width: 320px;
@@ -10,29 +10,5 @@
     width: 400px;
     left: 0;
     padding-top: 0;
-  }
-}
-
-.modal__title--mistake {
-  br {
-    display: none;
-  }
-
-  @media (min-width: @tablet-width) {
-    br {
-      display: block;
-    }
-    margin-top: 51px;
-  }
-}
-
-.modal__text--mistake {
-  margin-top: 29px;
-  margin-bottom: 21px;
-
-  @media (min-width: @tablet-width) {
-    margin-top: 39px;
-    margin-bottom: 27px;
-    padding: 0 61px;
   }
 }
