--- a/source/less/blocks/modal-success.less
+++ b/source/less/blocks/modal-success.less
@@ -1,28 +1,10 @@
-.modal__success {
+.modal-success {
   height: 323px;
   bottom: 10%;
-
 
   @media (min-width: @tablet-width) {
     height: 347px;
     width: 640px;
     bottom: 55%;
-  }
-}
-
-.modal__title--success {
-  margin-top: 38px;
-
-  @media (min-width: @tablet-width) {
-    margin-top: 55px;
-  }
-}
-
-.modal__text--success {
-  margin-top: 24px;
-  margin-bottom: 47px;
-
-  @media (min-width: @tablet-width) {
-    padding: 0 112px;
   }
 }
