--- a/source/less/blocks/photo-first.less
+++ b/source/less/blocks/photo-first.less
@@ -1,10 +1,10 @@
-.photo__first {
+.photo-first {
   @media (min-width: @tablet-width) {
     width: 100%;
   }
 
   @media (min-width: @desktop-width) {
-    .photo-text__wrapper {
+    .photo-text {
       position: auto;
       margin: 0;
       width: 100%;
@@ -12,7 +12,7 @@
   }
 }
 
-.photo__first-img {
+.photo-first__img {
   @media (min-width: @tablet-width) {
     width: 648px;
     height: 400px;
@@ -20,16 +20,5 @@
 
   @media (min-width: @desktop-width) {
     width: 100%;
-  }
-}
-
-.photo__img {
-  @media (min-width: @tablet-width) {
-    height: 267px;
-    width: 324px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 400px;
   }
 }
