--- a/source/less/blocks/presenting.less
+++ b/source/less/blocks/presenting.less
@@ -38,7 +38,7 @@
   }
 }
 
-.presenting-list {
+.presenting__list {
   padding: 0;
   margin: 0;
 }
@@ -58,12 +58,12 @@
   }
 }
 
-.presenting-list__item {
+.presenting__list-item {
   display: flex;
 }
 
-.form-input {
+.presenting-name {
   @media (min-width: @tablet-width) {
-    width: 40%;
+    width: 100%;
   }
 }
