--- a/source/less/blocks/video-tools.less
+++ b/source/less/blocks/video-tools.less
@@ -24,11 +24,11 @@
   }
 }
 
-.video__time-controls {
+.video-tools__time-controls {
   display: flex;
 }
 
-.video__scale {
+.video-tools__scale {
   width: 235px;
   height: 3px;
   background-color: fade(@base-white, 20%);
@@ -47,7 +47,7 @@
   }
 }
 
-.video__toggle {
+.video-tools__toggle {
   position: absolute;
   top: 19px;
   left: 58px;
