--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,9 +1,13 @@
 @import "fonts.less";
 @import "vars.less";
 @import "blocks/page.less";
-@import "blocks/main-nav.less";
+@import "blocks/page-body.less";
+@import "blocks/page-conteiner.less";
+@import "blocks/page-main.less";
 @import "blocks/page-header.less";
+@import "blocks/main-nav.less";
 @import "blocks/site-list.less";
+@import "blocks/main-logo.less";
 @import "blocks/main-slogan.less";
 @import "blocks/main-intro.less";
 @import "blocks/welcome-block.less";
@@ -11,35 +15,53 @@
 @import "blocks/advantages.less";
 @import "blocks/first-advantage.less";
 @import "blocks/second-advantage.less";
+@import "blocks/second-img.less";
 @import "blocks/deep-advantages.less";
+@import "blocks/icon-food.less";
+@import "blocks/icon-house.less";
+@import "blocks/icon-souvenirs.less";
+@import "blocks/icon-last.less";
 @import "blocks/advantages-others.less";
 @import "blocks/advantages-number.less";
 @import "blocks/blue-theme.less";
 @import "blocks/standart-theme.less";
 @import "blocks/search.less";
 @import "blocks/map.less";
-@import "blocks/sedona-tag.less";
-@import "blocks/copyright.less";
 @import "blocks/button.less";
 @import "blocks/photo-video.less";
 @import "blocks/photo.less";
 @import "blocks/photo-first.less";
-@import "blocks/photo-like.less";
+@import "blocks/like.less";
+@import "blocks/photo-text.less";
 @import "blocks/video.less";
 @import "blocks/video-tools.less";
 @import "blocks/video-controls.less";
+@import "blocks/video-repeat.less";
+@import "blocks/video-subtitles.less";
+@import "blocks/video-full.less";
 @import "blocks/feedback.less";
-@import "blocks/form-presenting.less";
-@import "blocks/form-contacts.less";
-@import "blocks/form-impression.less";
-@import "blocks/form-visited.less";
-@import "blocks/form-emotions.less";
+@import "blocks/feedback-form.less";
+@import "blocks/presenting.less";
+@import "blocks/contacts.less";
+@import "blocks/impression.less";
+@import "blocks/impression-input.less";
+@import "blocks/visited.less";
+@import "blocks/visited-input.less";
+@import "blocks/emotions.less";
 @import "blocks/form-input.less";
-@import "blocks/social.less";
+@import "blocks/form-footnote.less";
+@import "blocks/form-submit.less";
 @import "blocks/page-footer.less";
-@import "visually-hidden.less";
-@import "display-none.less";
+@import "blocks/sedona-tag.less";
+@import "blocks/social.less";
+@import "blocks/copyright.less";
+@import "blocks/icon-academy.less";
 @import "blocks/modal.less";
 @import "blocks/modal-mistake.less";
+@import "blocks/button-mistake.less";
 @import "blocks/modal-success.less";
-@import "blocks/modal-button.less";
+@import "blocks/button-wrapper.less";
+@import "blocks/button-success.less";
+@import "blocks/error.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/display-none.less";
