--- a/source/less/vars.less
+++ b/source/less/vars.less
@@ -71,7 +71,7 @@
 @mobile-controls-down:fade(@brown, 30%);
 
 /*----------Шрифты-----*/
-@main-font:"PT Sans", sans-serif;
+@main-font:"PT Sans", "Verdana", sans-serif;
 @main-font-size: 14px;
 @main-line-height: 21px;
 
