--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -72,7 +72,7 @@
   }
 }
 
-.contacts-list {
+.contacts__list {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -82,27 +82,7 @@
   }
 }
 
-.contact__label {
-  font-size: 14px;
-  color: @brown;
-  display: flex;
-  margin-left: 22px;
-  margin-bottom: 8px;
-
-
-  @media (min-width: @tablet-width) {
-    margin-left: 22px;
-    margin-bottom: 0;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-left: 0;
-    margin-top: 26px;
-    margin-right: 16px;
-  }
-}
-
-.contacts-list__item {
+.contacts__list-item {
   @media (min-width: @desktop-width) {
     display: flex;
     width: 50%;
@@ -123,7 +103,27 @@
   }
 }
 
-.contacts-item__tel {
+.contacts__label {
+  font-size: 14px;
+  color: @brown;
+  display: flex;
+  margin-left: 22px;
+  margin-bottom: 8px;
+
+
+  @media (min-width: @tablet-width) {
+    margin-left: 22px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 0;
+    margin-top: 26px;
+    margin-right: 16px;
+  }
+}
+
+.contacts__tel {
   position: relative;
 
   &::after {
@@ -145,7 +145,7 @@
   }
 }
 
-.contacts-item__email {
+.contacts__email {
   position: relative;
 
   &::after {
