--- a/source/less/blocks/impression.less
+++ b/source/less/blocks/impression.less
@@ -1,4 +1,4 @@
-.imprassion {
+.impression {
   border: none;
   position: relative;
   margin: 0;
@@ -32,7 +32,7 @@
   }
 }
 
-.imprassion__title {
+.impression__title {
   font-weight: 700;
   margin-bottom: 36px;
 
@@ -48,13 +48,13 @@
   }
 }
 
-.imprassion-list {
+.impression__list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.imprassion-list__item {
+.impression__list-item {
   margin-bottom: 43px;
 
   &:last-child {
@@ -74,7 +74,7 @@
   }
 }
 
-.imprassion__label {
+.impression__label {
   position: relative;
   text-transform: none;
   font-weight: 700;
@@ -88,58 +88,4 @@
   @media (min-width: @desktop-width) {
     padding-left: 80px;
   }
-}
-
-.impression-input--radio + .imprassion__label::before {
-  content: "";
-  position: absolute;
-  background-color: @base-grey;
-  height: 55px;
-  width: 55px;
-  top: -17px;
-  left: -22px;
-  border-radius: 50%;
-
-  @media (min-width: @tablet-width) {
-    left: -2px;
-    top: -17px;
-  }
-
-  @media (min-width: @desktop-width) {
-    left: 5px;
-    top: -15px;
-  }
-}
-
-.impression-input--radio:focus + .imprassion__label::before,
-.impression-input--radio:hover + .imprassion__label::before {
-  background-color: @light-grey;
-}
-
-.impression-input--radio:active + .imprassion__label::before {
-  background-color: @base-middlegrey;
-}
-
-.impression-input--radio:checked + .imprassion__label::after {
-  content: "";
-  position: absolute;
-  background-color: @radio-button;
-  height: 21px;
-  width: 21px;
-  top: 0;
-  left: -4px;
-  border-radius: 50%;
-
-  @media (min-width: @tablet-width) {
-    left: 17px;
-  }
-
-  @media (min-width: @desktop-width) {
-    left: 22px;
-    top: 3px;
-  }
-}
-
-.impression-input--radio:checked:active + .imprassion__label::after {
-  background-color: @radio-button-down;
 }
