--- a/source/less/blocks/like.less
+++ b/source/less/blocks/like.less
@@ -29,17 +29,33 @@
   }
 }
 
-.first-photo__like {
+.like__first-photo {
+  padding: 0;
+  padding-top: 2px;
+
+  .like__number {
+    padding-left: 10px;
+  }
+
   @media (min-width: @tablet-width) {
-    right: 14px;
+    padding-top: 0;
+    right: 20px;
     bottom: 24px;
+
+    .like__number {
+      padding-left: 7px;
+    }
   }
 }
 
-.others-photo__like {
+.like__others-photo {
+  padding: 0;
+  padding-top: 2px;
+
   @media (min-width: @tablet-width) {
-    left: 234px;
+    left: 240px;
     bottom: 25px;
+    padding-top: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -47,12 +63,16 @@
   }
 }
 
-.likes-number {
+.like__number {
   line-height: 24px;
   font-size: 14px;
   font-weight: 700;
   font-family: @main-font;
   padding-left: 10px;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 5px;
+  }
 
   @media (min-width: @desktop-width) {
     color: @base-white;
