--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,13 +1,20 @@
+.map {
+  margin-bottom: 6px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
+}
+
 .map__wrapper {
   position: relative;
   width: 100%;
   height: 350px;
   margin: 0;
   padding: 0;
-  margin-bottom: 6px;
 }
 
-.map-picture__wrapper {
+.map__picture {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -28,14 +35,14 @@
   }
 }
 
-.map-picture {
+.map__img {
   display: flex;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-.map-iframe {
+.map__iframe {
   z-index: 2;
   border: none;
   width: 100%;
