--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -51,35 +51,6 @@
   }
 }
 
-.photo-text__wrapper {
-  @media (min-width: @tablet-width) {
-    background-color: @base-grey;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 0 20px;
-    padding-top: 15px;
-  }
-
-  @media (min-width: @desktop-width) {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 400px;
-    height: 80px;
-    box-sizing: border-box;
-    background-color: fade(@base-black, 30%);
-    color: @base-white;
-  }
-}
-
-.photo-text__wrapper--desktop {
-  @media (min-width: @desktop-width) {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
 .photo__title {
   line-height: 24px;
   font-size: inherit;
@@ -105,5 +76,16 @@
 
   @media (min-width: @desktop-width) {
     color: @base-white;
+  }
+}
+
+.photo__img {
+  @media (min-width: @tablet-width) {
+    height: 267px;
+    width: 324px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 400px;
   }
 }
