--- a/source/less/blocks/sedona-tag.less
+++ b/source/less/blocks/sedona-tag.less
@@ -5,4 +5,9 @@
   margin: 0;
   padding: 0;
   margin-bottom: 30px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 17px;
+    margin-top: 13px;
+  }
 }
