--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,72 +1,3 @@
-.video__wrapper {
-  padding-top: 32px;
-  padding-bottom: 40px;
-  position: relative;
-
-  &::before {
-    content: "";
-    left: 0;
-    top: 0;
-    position: absolute;
-    background-color: @light-grey;
-    height: 1px;
-    width: 320px;
-
-    @media (min-width: @tablet-width) {
-      display: none;
-    }
-  }
-
-  @media (min-width: @tablet-width) {
-    margin: auto;
-    padding-top: 59px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin: auto;
-    padding-top: 61px;
-    margin-bottom: 84px;
-    padding-bottom: 0;
-  }
-}
-
-.video-text__wrapper {
-  max-width: 266px;
-  margin: auto;
-
-  @media (min-width: @tablet-width) {
-    margin: auto;
-    max-width: 445px;
-  }
-}
-
-.video__title {
-  font-size: 18px;
-  line-height: 26px;
-  margin: 0;
-
-  @media (min-width: @tablet-width) {
-    font-size: 30px;
-  }
-}
-
-.video__description {
-  margin: 0;
-  margin-bottom: 35px;
-  margin-top: 27px;
-  line-height: 24px;
-  color: @brown;
-
-  @media (min-width: @tablet-width) {
-    margin-bottom: 78px;
-    margin-top: 33px;
-
-    br {
-      display: none;
-    }
-  }
-}
-
 .video {
   margin: 0;
   padding: 0;
@@ -124,5 +55,75 @@
 
   @media (min-width: @desktop-width) {
     width: 800px;
+  }
+}
+
+.video__wrapper {
+  padding-top: 32px;
+  padding-bottom: 40px;
+  position: relative;
+
+  &::before {
+    content: "";
+    left: 0;
+    top: 0;
+    position: absolute;
+    background-color: @light-grey;
+    height: 1px;
+    width: 320px;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    margin: auto;
+    padding-top: 59px;
+    padding-bottom: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: auto;
+    padding-top: 61px;
+    margin-bottom: 87px;
+    padding-bottom: 0;
+  }
+}
+
+.video__text {
+  max-width: 266px;
+  margin: auto;
+
+  @media (min-width: @tablet-width) {
+    margin: auto;
+    max-width: 445px;
+  }
+}
+
+.video__title {
+  font-size: 18px;
+  line-height: 26px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
+}
+
+.video__description {
+  margin: 0;
+  margin-bottom: 35px;
+  margin-top: 27px;
+  line-height: 24px;
+  color: @brown;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 78px;
+    margin-top: 33px;
+
+    br {
+      display: none;
+    }
   }
 }
