правки после проверки (защита)

--- a/source/less/blocks/advantages-others.less
+++ b/source/less/blocks/advantages-others.less
@@ -4,7 +4,7 @@
   padding: 0;
   padding-bottom: 5px;
 
-  .advantages__title {
+  .advantages-others__title {
     padding-top: 27px;
   }
 
@@ -43,18 +43,18 @@
 
   @media (min-width: @tablet-width) {
     &:first-child {
-      .advantages__title {
+      .advantages-others__title {
         padding-right: 45px;
       }
 
-      .advantages__description {
+      .advantages-others__description {
         padding-left: 0;
         padding-top: 25px;
         padding-bottom: 60px;
         padding-right: 45px;
       }
 
-      .advantages-number {
+      .advantages-others__number {
         padding-right: 43px;
 
         &::after {
@@ -64,24 +64,24 @@
     }
 
     &:nth-child(2) {
-      .advantages__description {
+      .advantages-others__description {
         padding-top: 25px;
       }
     }
 
     &:last-child {
-      .advantages__title {
+      .advantages-others__title {
         padding-left: 45px;
       }
 
-      .advantages__description {
+      .advantages-others__description {
         padding-right: 15px;
         padding-left: 55px;
         padding-bottom: 40px;
         padding-top: 25px;
       }
 
-      .advantages-number {
+      .advantages-others__number {
         padding-left: 45px;
 
         &::before {
@@ -92,23 +92,23 @@
   }
 
   @media (min-width: @desktop-width) {
-    .advantages__title {
+    .advantages-others__title {
       padding-top: 28px;
     }
 
     &:first-child {
-      .advantages__title {
+      .advantages-others__title {
         padding-bottom: 0;
       }
 
-      .advantages__description {
+      .advantages-others__description {
         padding-left: 0;
         padding-right: 47px;
         padding-bottom: 45px;
         padding-top: 10px;
       }
 
-      .advantages-number {
+      .advantages-others__number {
         padding-right: 43px;
 
         &::after {
@@ -118,11 +118,11 @@
     }
 
     &:nth-child(2) {
-      .advantages__title {
+      .advantages-others__title {
         padding-bottom: 8px;
       }
 
-      .advantages__description {
+      .advantages-others__description {
         padding-left: 55px;
         padding-right: 55px;
         padding-top: 18px;
@@ -131,13 +131,13 @@
     }
 
     &:last-child {
-      .advantages__description {
+      .advantages-others__description {
         padding-right: 5px;
         padding-left: 50px;
         padding-top: 23px;
       }
 
-      .advantages-number {
+      .advantages-others__number {
         padding-top: 2px;
 
         &::before {
