--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -6,7 +6,7 @@
   margin-top: 28px;
 
   @media (min-width: @tablet-width) {
-    margin-top: 37px;
+    margin-top: 36px;
     width: 100%;
   }
 
@@ -88,7 +88,8 @@
     width: 50%;
   }
 
-  .form-input {
+  .contacts__input-email,
+  .contacts__input-tel {
     margin-bottom: 13px;
 
     @media (min-width: @tablet-width) {
