--- a/source/less/blocks/emotions.less
+++ b/source/less/blocks/emotions.less
@@ -89,8 +89,8 @@
 
 .emotions__message:active {
   background-color: @base-white;
-  border: 4px solid  @light-grey;
-  outline: none;
+  outline: 4px solid  @light-grey;
+  outline-offset: -4px;
 }
 
 .emotions__message::placeholder {
