--- a/source/less/blocks/photo-first.less
+++ b/source/less/blocks/photo-first.less
@@ -4,7 +4,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    .photo-text {
+    .photo-first__text {
       position: auto;
       margin: 0;
       width: 100%;
