--- a/source/less/blocks/presenting.less
+++ b/source/less/blocks/presenting.less
@@ -33,6 +33,10 @@
   margin-right: 13px;
   margin-top: 18px;
 
+  @media (min-width: @tablet-width) {
+    margin-top: 14px;
+  }
+
   @media (min-width: @desktop-width) {
     margin-top: 16px;
   }
@@ -60,10 +64,4 @@
 
 .presenting__list-item {
   display: flex;
-}
-
-.presenting-name {
-  @media (min-width: @tablet-width) {
-    width: 100%;
-  }
 }
