--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -3,18 +3,6 @@
   margin: auto;
   margin-bottom: 49px;
 
-  .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 280px;
-    margin: auto;
-
-    @media (min-width: @tablet-width) {
-      min-width: 458px;
-    }
-  }
-
   @media (min-width: @tablet-width) {
     padding: 58px 64px;
     margin: auto;
@@ -60,5 +48,17 @@
     margin-bottom: 43px;
     padding: 0 310px;
     display: flex;
+  }
+}
+
+.search__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  margin: auto;
+
+  @media (min-width: @tablet-width) {
+    min-width: 458px;
   }
 }
