--- a/source/less/blocks/first-advantage.less
+++ b/source/less/blocks/first-advantage.less
@@ -1,46 +1,45 @@
-.first-advantage {
-  .advantages__title {
-    padding-top: 50px;
-  }
+.first-advantage__title {
+  padding-top: 50px;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .first-advantage {
     display: grid;
     grid-template-columns: 1fr 2fr;
     margin-bottom: 4px;
-
-    .advantages__title {
-      padding-top: 40px;
-      padding-bottom: 0;
-    }
-
-    .advantages__description {
-      padding: 0;
-      margin-bottom: 45px;
-      margin-top: 10px;
-    }
   }
 
-  @media (min-width: @desktop-width) {
-    .advantages__title {
-      padding-top: 47px;
-    }
+  .first-advantage__title {
+    padding-top: 40px;
+    padding-bottom: 0;
+  }
 
-    .advantages__description {
-      margin-bottom: 58px;
-      padding-right: 32px;
-      padding-left: 32px;
+  .first-advantage__description {
+    padding: 0;
+    margin-bottom: 45px;
+    margin-top: 10px;
+  }
+}
 
-      br {
-        display: none;
-      }
+@media (min-width: @desktop-width) {
+  .first-advantage__title {
+    padding-top: 47px;
+  }
+
+  .first-advantage__description {
+    margin-bottom: 58px;
+    padding-right: 32px;
+    padding-left: 32px;
+
+    br {
+      display: none;
     }
   }
 }
 
-.first-advantage .advantages-number {
+.first-advantage__number {
   &::before,
   &::after {
     color: @base-white;
   }
-  color: @base-white;
 }
