--- a/source/less/blocks/form-input.less
+++ b/source/less/blocks/form-input.less
@@ -21,8 +21,8 @@
 
 .form-input:active {
   background-color: @base-white;
-  border: 4px solid  @light-grey;
-  outline: none;
+  outline: 4px solid  @light-grey;
+  outline-offset: -4px;
 }
 
 .form-input::placeholder {
