--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -62,6 +62,10 @@
     padding: 0;
   }
 
+  .main-nav--closed ~ .main-logo {
+    position: absolute;
+  }
+
   .main-nav--opened .main-nav__wrapper {
     width: 100%;
     z-index: 2;
@@ -89,6 +93,10 @@
 
   .main-nav--nojs .site-list__item {
     display: block;
+  }
+
+  .main-nav--nojs ~ .main-logo {
+    position: relative;
   }
 }
 
