--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -2,6 +2,7 @@
   font-family: "PT Sans";
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
   src: local("PT Sans"), local("PTSans"), url("../fonts/ptsans.woff2") format("woff2"), url("../fonts/ptsans.woff") format("woff");
 }
 
@@ -9,5 +10,6 @@
   font-family: "PT Sans";
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
   src: local("PTSans-Bold"), local("PT Sans Bold"), url("../fonts/ptsansbold.woff2") format("woff2"), url("../fonts/ptsansbold.woff") format("woff");
 }
