--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,7 +10,7 @@
 @import "blocks/main-logo.less";
 @import "blocks/main-slogan.less";
 @import "blocks/main-intro.less";
-@import "blocks/welcome-block.less";
+@import "blocks/welcome.less";
 @import "blocks/page-intro.less";
 @import "blocks/advantages.less";
 @import "blocks/first-advantage.less";
