правильные пути к фоновым картинкам

--- a/исходники/source/less/blocks/visited-input.less
+++ b/исходники/source/less/blocks/visited-input.less
@@ -25,7 +25,7 @@
 .visited-input:checked + .visited__label::after {
   content: "";
   position: absolute;
-  background-image: url("../../img/icon-tick.svg");
+  background-image: url("../img/icon-tick.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
   height: 50px;
