--- a/исходники/source/less/blocks/contacts.less
+++ b/исходники/source/less/blocks/contacts.less
@@ -131,7 +131,7 @@
     content: "";
     position: absolute;
     background-color: @middle-grey;
-    background-image: url("../../img/icon-phone.svg");
+    background-image: url("../img/icon-phone.svg");
     background-repeat: no-repeat;
     background-position: center;
     height: 58px;
@@ -153,7 +153,7 @@
     content: "";
     position: absolute;
     background-color: @middle-grey;
-    background-image: url("../../img/icon-mail.svg");
+    background-image: url("../img/icon-mail.svg");
     background-repeat: no-repeat;
     background-position: center;
     height: 58px;
