--- a/исходники/source/less/blocks/page-intro.less
+++ b/исходники/source/less/blocks/page-intro.less
@@ -1,5 +1,5 @@
 .page-intro {
-  background: url("../../img/bg-back-mobile@1x.jpg");
+  background: url("../img/bg-back-mobile@1x.jpg");
   height: 158px;
   background-repeat: no-repeat;
   background-color: @brown;
@@ -9,7 +9,7 @@
   background-position-x: -225px;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-image: url("../img/bg-back-mobile@2x.jpg");
     background-size: auto 800px;
     background-position-y: -505px;
     background-position-x: -470px;
@@ -17,24 +17,24 @@
 
   @media (min-width: @tablet-width) {
     height: 290px;
-    background-image: url("../../img/bg-back-tablet@1x.jpg");
+    background-image: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-image: url("../img/bg-back-tablet@2x.jpg");
       background-size: cover;
     }
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/bg-back-desktop@1x.jpg");
     background-position-y: -215px;
     padding-bottom: 10px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/bg-back-desktop@2x.jpg");
+      background-image: url("../img/bg-back-desktop@2x.jpg");
     }
   }
 }
@@ -58,7 +58,7 @@
     bottom: -61px;
     left: 0;
     width: 100%;
-    background: url("../../img/bg-intro-triangle-mobile.svg");
+    background: url("../img/bg-intro-triangle-mobile.svg");
     background-repeat: no-repeat;
     height: 30px;
     background-size: cover;
@@ -66,13 +66,13 @@
     box-sizing: border-box;
 
     @media (min-width: @tablet-width) {
-      background-image: url("../../img/bg-intro-triangle-tablet.svg");
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
       height: 57px;
       bottom: -111px;
     }
 
     @media (min-width: @desktop-width) {
-      background-image: url("../../img/bg-intro-triangle-desktop.svg");
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
       bottom: -116px;
       left: 0;
     }
