--- a/исходники/source/less/blocks/video.less
+++ b/исходники/source/less/blocks/video.less
@@ -9,31 +9,31 @@
     @media (max-width: @mobile-width-only) {
       background: transparent;
       background-size: cover;
-      background-image: url("../../img/video-mobile@1x.jpg");
+      background-image: url("../img/video-mobile@1x.jpg");
       width: 320px;
       height: 201px;
 
       @media (min-resolution: 2dppx) {
         background: transparent;
-        background-image: url("../../img/video-mobile@2x.jpg");
+        background-image: url("../img/video-mobile@2x.jpg");
         background-size: cover;
       }
     }
 
     @media (min-width: @tablet-width) {
-      background-image: url("../../img/video-tablet@1x.jpg");
+      background-image: url("../img/video-tablet@1x.jpg");
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../../img/video-tablet@2x.jpg");
+        background-image: url("../img/video-tablet@2x.jpg");
         background-size: cover;
       }
     }
 
     @media (min-width: @desktop-width) {
-      background-image: url("../../img/video-desktop@1x.jpg");
+      background-image: url("../img/video-desktop@1x.jpg");
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../../img/video-desktop@2x.jpg");
+        background-image: url("../img/video-desktop@2x.jpg");
       }
     }
   }
