--- a/исходники/source/less/blocks/welcome.less
+++ b/исходники/source/less/blocks/welcome.less
@@ -1,5 +1,5 @@
 .welcome {
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-position: center;
   background-color: @base-blue;
   height: 389px;
@@ -8,30 +8,29 @@
   padding: 0;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-image: url("../img/bg-back-mobile@2x.jpg");
     background-size: cover;
   }
 
   @media (min-width: @tablet-width) {
-    background-image: url("../../img/bg-back-tablet@1x.jpg");
+    background-image: url("../img/bg-back-tablet@1x.jpg");
     background-size: cover;
     height: 518px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-image: url("../img/bg-back-tablet@2x.jpg");
       background-size: cover;
     }
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/bg-back-desktop@1x.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/bg-back-desktop@2x.jpg");
+      background-image: url("../img/bg-back-desktop@2x.jpg");
     }
   }
 }
-
 
 .welcome__wrapper {
   padding: 90px 0;
@@ -44,7 +43,7 @@
     bottom: 11px;
     left: 0;
     width: 100%;
-    background-image: url("../../img/bg-intro-triangle-mobile.svg");
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
     background-repeat: no-repeat;
     height: 30px;
     background-size: cover;
@@ -52,13 +51,13 @@
     box-sizing: border-box;
 
     @media (min-width: @tablet-width) {
-      background-image: url("../../img/bg-intro-triangle-tablet.svg");
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
       height: 57px;
       bottom: 5px;
     }
 
     @media (min-width: @desktop-width) {
-      background-image: url("../../img/bg-intro-triangle-desktop.svg");
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
     }
   }
 
